--- a/Bootcamp Potência Tech Angular Developer - Powered by iFood/Projetos/Pokedex/index.html
+++ b/Bootcamp Potência Tech Angular Developer - Powered by iFood/Projetos/Pokedex/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex - Sua biblioteca pokemón</title>
     <link rel="stylesheet" href="./assets/css/global.css">
-    <link rel="icon" href="./Pokeball-icon.png">
+    <link rel="stylesheet" href="./assets/css/pokemons.css">
+    <link rel="icon" href="./assets/css/Pokeball-icon.png">
     <!--  Normalize para padronizar o CSS em todos os navegadores  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--Adicionando a fonte Roboto e suas variações-->
